# RiskAssessment

./: App-test.js  App.css  App.js  CMakeLists.txt  CMakePresets.json  CompanyList.css  CompanyList.js  Dashboard.css  Dashboard.js  FirewallConfig.css  FirewallConfig.js  NetworkScanning.css  NetworkScanning.js  PasswordAnalysis.css  PasswordAnalysis.js  Reports.css  Reports.js  SoftwareVulnerability.css  SoftwareVulnerability.js  backend.cpp  common.cpp  common.h  companies_handler.cpp  companies_handler.h  index.html  login_handler.cpp  login_handler.h  main-3.cpp  main.cpp  password_analyzer.cpp  password_analyzer.h  post_handler.cpp  post_handler.h  register_handler.cpp  register_handler.h  signup.h
